@@ -224,3 +224,46 @@ State: 1
 EOF
 autfilt --sbacc taut.hoa > out.hoa
 diff out.hoa expect.hoa
+
+cat >alt.hoa <<EOF
+HOA: v1
+States: 4
+Start: 0
+AP: 1 "a"
+Acceptance: 2 Inf(0) & Inf(1)
+--BODY--
+State: 0
+[0] 1&2 {0}
+[0] 3 {0}
+State: 1
+[0] 0 {1}
+State: 2
+[t] 2
+State: 3
+[!0] 0
+--END--
+EOF
+
+cat >expect.hoa <<EOF
+HOA: v1
+States: 4
+Start: 0
+AP: 1 "a"
+acc-name: generalized-Buchi 2
+Acceptance: 2 Inf(0)&Inf(1)
+properties: univ-branch trans-labels explicit-labels state-acc
+--BODY--
+State: 0 {0}
+[0] 3
+[0] 1&2
+State: 1 {0 1}
+[0] 0
+State: 2
+[t] 2
+State: 3 {0}
+[!0] 0
+--END--
+EOF
+
+autfilt --sbacc alt.hoa > out.hoa
+diff out.hoa expect.hoa
