@@ -148,6 +148,8 @@ New in spot 2.3.5.dev (not yet released)
     input automaton with generalized Büchi/co-Büchi acceptance and
     convert it to a weak alternating automaton.
 
+  - spot::sbacc() is now able to work on alternating automata.
+
   Python:
 
   - The 'spot.gen' package exports the functions from libspotgen.
